[package]
name = "zarb-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Zarb <admin@zarb.network>"]

[dependencies]
thiserror = "1.0"
minicbor = { version = "0.12", features = ["std", "half", "derive"] }
bls12_381_plus = { version = "0.6.0", default-features = false, features = [
    "alloc",
    "hashing",
    "pairings",
] }
group = { version = "0.11", default-features = false }

[dev-dependencies]
hex = "0.4"
