[package]
name = "zarb-types"
version = "0.1.0"
edition = "2021"
authors = ["Zarb <admin@zarb.network>"]

[dependencies]
thiserror = "1.0"
minicbor = { version = "0.12", features = ["std", "half", "derive"] }
bls12_381_plus = { version = "0.6.0", default-features = false, features = [
    "alloc",
    "hashing",
    "pairings",
] }
group = { version = "0.11", default-features = false }
sha2 = "0.9"
blake2b_simd = "1.0"
ripemd = "0.1"
rand = "0.8"
hex = "0.4"

[dev-dependencies]

