[package]
name = "pactus-types"
version = "0.1.0"
edition = "2021"
authors = ["Pactus <info@pactus.org>"]

[dependencies]
thiserror = "1.0"
minicbor = { version = "0.24", features = ["std", "half", "derive"] }
bls12_381_plus = { version = "0.8", default-features = false, features = [
    "alloc",
    "hashing",
    "pairings",
] }
group = { version = "0.13", default-features = false }
sha2 = "0.10"
blake2b_simd = "1.0"
ripemd = "0.1"
rand = "0.8"
hex = "0.4"

[dev-dependencies]

