[package]
name = "zarb"
version = "0.1.0"
edition = "2021"
authors = ["Zarb <admin@zarb.network>"]

[dependencies]
zarb-crypto = { path = "../crypto" }
zarb-types = { path = "../types" }
thiserror = "1.0"
minicbor = { version = "0.12", features = ["std", "half", "derive"] }
libp2p = { version = "0.41", default-features = false, features = [
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "noise",
    "yamux",
    "tcp-async-io",
    "dns-async-std",
    "mplex",
    "request-response",
    "websocket"
] }
futures = "0.3"
async-trait = "0.1"
async-std = "1.10"
log = "0.4"

[dev-dependencies]
hex = "0.4"
